[package]
edition = "2021"
name = "deployer"
version = "1.7.8"

default-run = "manual_deploy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
aws-config = "1.5.6"
aws-credential-types = "1.2.1"
aws-sdk-cloudwatch = "1.48.0"
aws-sdk-s3 = "1.51.0"
aws-sdk-sqs = "1.43.0"
aws-smithy-types = "1.2.6"
aws-types = "1.3.3"
aws_lambda_events = { version = "0.15.1", default-features = false, features = [
  "s3",
  "sqs",
] }
backon = "1.2.0"
base64 = "0.22.1"
brotli = "6.0.0"
bstr = "1.10.0"
dotenvy = "0.15.7"
futures = "0.3.30"
graphql_client = { version = "0.14.0", default-features = false }
jwalk = "0.8.1"
md-5 = "0.10.6"
mime_guess = "2.0.5"
once_cell = "1.19.0"
path_macro = "1.0.0"
percent-encoding = "2.3.1"
reqwest = { version = "0.12.7", default-features = false, features = [
  "rustls-tls",
  "gzip",
  "json",
  "http2",
  "brotli",
] }
reqwest-middleware = { version = "0.3.3", features = ["json"] }
reqwest-retry = "0.6.1"
reqwest-tracing = "0.5.3"
scopeguard = "1.2.0"
scraper = "0.20.0"
# Use rustls to prevent linking issue
sentry = { version = "0.34.0", default-features = false, features = [
  "backtrace",
  "contexts",
  "panic",
  "reqwest",
  "rustls",
  "tracing",
] }
sentry-anyhow = "0.34.0"
sentry-tracing = "0.34.0"
# pin version due to https://github.com/serde-rs/serde/issues/2538
serde = "1.0.210"
# separated dep to speed up compile speed https://github.com/serde-rs/serde/issues/2584
serde_derive = "1.0.210"
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
tap = "1.0.1"
tar = "0.4.42"
tempfile = "3.12.0"
thiserror = "1.0.64"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io", "io-util"] }
tracing = "0.1.40"
tracing-axiom = { version = "0.2.0", default-features = false, features = [
  "rustls-tls",
] }
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }

[features]
default = ["intended_fail"]
intended_fail = []

[dev-dependencies]
insta = "1.40.0"
